[package]
name = "master"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
md5 = "0.7.0"
reqwest = { version = "0.12.2", features = ["json"] }
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
uuid = { version = "1.10.0", features = ["v4"] }
time = "0.3"
actix-cors = "0.7.0"
tempfile = "3.14.0"
tokio = "1.41.1"
